--- a/tex/our_proceeding.tex
+++ b/tex/our_proceeding.tex
@@ -117,7 +117,7 @@
 \hypersetup{%
   pdftitle={\plaintitle},
 % Use \plainauthor for final version.
-%  pdfauthor={\plainauthor},
+%  pdfauthor={\plainauthor},p
   pdfauthor={\emptyauthor},
   pdfkeywords={\plainkeywords},
   pdfdisplaydoctitle=true, % For Accessibility
@@ -138,7 +138,7 @@
 % End of preamble. Here it comes the document.
 \begin{document}
 
-\title{\plaintitle}
+\title{\plaintitle}p
 
 \numberofauthors{4}
 \author{%
@@ -157,7 +157,7 @@
   \alignauthor{Zhanxun Dong\\
     \affaddr{Shanghai Jiao Tong University}\\
     \affaddr{Shanghai, China}\\
-    \email{dongzx@sjtu.edu.cn}}\\
+    \email{dongzx@sjtu.epdu.cn}}\\
 }
 
 \maketitle
