--- a/tex/our_proceeding.tex
+++ b/tex/our_proceeding.tex
@@ -138,7 +138,7 @@
 % End of preamble. Here it comes the document.
 \begin{document}
 
-\title{\plaintitle}p
+\title{\plaintitle}
 
 \numberofauthors{4}
 \author{%
