adjust pdf format

--- a/tex/our_body.tex
+++ b/tex/our_body.tex
@@ -69,7 +69,7 @@ Our idea is derived from the fluency hypothesis.
 Reber et al.\cite{Reber2004} propose that beauty is grounded in perceivers' fluency of processing an object.
 Viewing a webpage is essentially a procedure of image processing in the human visual system.
 How to evaluate the fluency of this procedure?
-Is there any observable behavioral difference between fluent and influent visual processes? 
+Is there any observable behavioral difference between fluent and influent visual processes?
 Eye movement, as the visible part of our attention, serves as a precursor to all other neurological and cognitive functions.
 If the aesthetic pleasure is a function of the perceiver's processing dynamics\cite{Reber2004}, the attentional process must be the doorway to our aesthetic judgements.
 
@@ -95,6 +95,7 @@ The Entropy measure will be applied on two aspects of eye-tracking data:
   \label{fig:all}
 \end{figure*}
 
+\clearpage
 \section{Experiment and data collection}
 \label{sec:exp}
 The experiment simulates natural and accidental landings on websites. The only unnatural part of the experiment is the form we call Time-limited Exploration. That means the experiment encourages the observers to do quick general explorations on the pages. After three pages of dummy testing in advance, the observers should aware that they only have a few seconds to view each of the pages displayed. This is acceptable because we knew that users are used to making a quick decision whether stay or leave in first seconds after landing a new page to avoid wasting more time than necessary on bad pages\cite{Liu2010}.
@@ -404,7 +405,7 @@ The analysis shows that aesthetic score is weakly correlated with Number of Fixa
   \label{fig:bvae}
 \end{figure}
 
-\balance{}
+%\balance{}
 \begin{figure*}
   \centering
   \includegraphics [width=1.94\columnwidth]{fig_box.pdf}
