--- a/tex/our_proceeding.tex
+++ b/tex/our_proceeding.tex
@@ -75,7 +75,7 @@
 
 % 我们自己的包
 \usepackage{booktabs}
-\usepackage{graphicx} %加载图片p
+\usepackage{graphicx} %加载图片
 \usepackage{float} % 流动布局
 %\usepackage{hidelinks}{hyperref} % 隐藏目录链接的超链接格式
 \usepackage[none]{hyphenat} % 避免表格中的换行
@@ -117,7 +117,7 @@
 \hypersetup{%
   pdftitle={\plaintitle},
 % Use \plainauthor for final version.
-%  pdfauthor={\plainauthor},p
+%  pdfauthor={\plainauthor},
   pdfauthor={\emptyauthor},
   pdfkeywords={\plainkeywords},
   pdfdisplaydoctitle=true, % For Accessibility
